# SQM_gtestRegex

./: .travis.yml  CMakeLists.txt  MyParser.cpp  MyParser.h  Parser.cpp  Parser.h  WhiteBoxTest.h  main.cpp
test/: CMakeLists.txt  ImplementedFeaturesTest.h  NotImplementedFeaturesTest.h  main.cpp
